# Fetch-a-Web-API-with-Rust

./: .gitignore  Cargo.toml
src/: config_yaml.rs  file.rs  main.rs  request.rs  utils.rs  write_csv.rs
